# SnacksBar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  PLANNING.md  README.md  docker-compose.yaml  pylint.cfg  pyproject.toml
diagrams/: models.puml
scripts/: ddl.sql  populate_api.py
snacksbar/: constants.py  dev_server.py  main.py  security.py  utils.py
snacksbar/authserver/: __init__.py  app.py  routes.py  utils.py
snacksbar/authserver/db/: session.py
snacksbar/products/: __init__.py  app.py  db.py  parse.py
snacksbar/products/db/: models.py  session.py
snacksbar/products/routes/: __init__.py  categories.py  drinks.py  dtos.py  ingredients.py  priced.py  roles.py  snacks.py
snacksbar/users/: __init__.py  app.py  dependencies.py  routes.py
src/: alembic.ini  global_utils.py
src/alembic/: env.py
src/alembic/versions/: 2022-02-28__19:55:35__62693f203676__initial_migrations.py  2022-03-01-09:11:07_2646f942b376_initial_migrations.py
src/authserver/: __init__.py  dtos.py  main.py  routes.py  settings.py  utils.py
src/authserver/db/: session.py
src/snacksbar/: __init__.py  constants.py  dev_server.py  main.py  security.py  settings.py  utils.py
src/snacksbar/products/: app.py  dtos.py
src/snacksbar/products/db/: models.py  session.py
src/snacksbar/products/routes/: __init__.py  dtos.py  priced.py  snacks.py
src/snacksbar/users/: dependencies.py  dtos.py
