[tool.commitizen]
version = "0.1.0"
tag_format = "$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
annotated_tag = true
check_consistency = true
version_files = [
    "VERSION",
    "pyproject.toml",
    "snacksbar/__init__.py",
]

[tool.mypy]
ignore_missing_imports = true
no_silence_site_packages = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_globals = true
disallow_redefinition = true
no_implicit_reexport = true
pretty = true
sqlite_cache = true
no_site_packages = true

[[tool.mypy.overrides]]
module = ["faker.*", "dotenv.*", "redis.*"]
follow_imports = "skip"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pydantic.*"]
no_implicit_optional = false
warn_unused_ignores = false
disallow_untyped_calls = false
disallow_untyped_globals = false

[tool.poetry]
name = "snacksbar"
version = "0.1.0"
description = ""
authors = ["Vinícius Vargas <santunionivinicius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
SQLAlchemy = "^1.4.29"
throttled = {path = "../../OpenSource/ThrottledAPI"}
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pylint = "^2.12.2"
commitizen = "^2.20.4"
black = "^21.12b0"
isort = "^5.10.1"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
devtools = "^0.8.0"
tox = "^3.24.5"
alembic = "^1.7.5"
sqlalchemy-stubs = "^0.4"

[tool.pylint.design]
max-returns = 8

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-docstring",
    "unused-argument",
    "line-too-long",
    "fixme",
    "too-few-public-methods",
    "too-many-arguments",
    "c-extension-no-member",
    "no-name-in-module"
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov-report html --cov-report term --cov=the_flash"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38,py39,py310
[tox:.package]
basepython = python3

[testenv]
deps = pytest
       pytest-randomly
       pytest-mock
commands = pytest tests
"""
