[tool.commitizen]
version = "0.3.1"
tag_format = "$major.$minor.$patch$prerelease"
annotated_tag = true
check_consistency = true
version_files = [
    "pyproject.toml",
    "src/snacksbar/__init__.py",
]

[tool.flake8]
max-line-length = 120
max-complexity = 10
exclude = ["src/alembic/versions/*.py"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
no_silence_site_packages = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_globals = true
disallow_redefinition = true
no_implicit_reexport = true
pretty = true
sqlite_cache = true
no_site_packages = true

[[tool.mypy.overrides]]
module = ["faker.*", "dotenv.*", "redis.*"]
follow_imports = "skip"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pydantic.*"]
no_implicit_optional = false
warn_unused_ignores = false
disallow_untyped_calls = false
disallow_untyped_globals = false

[tool.poetry]
name = "snacksbar"
version = "0.3.1"
description = ""
authors = ["Vinícius Vargas <santunionivinicius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.74.1"
uvicorn = "^0.17.0"
SQLAlchemy = "^1.4.29"
ujson = "^5.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
redis = "^4.1.4"
throttled = "^0.2.1"
jose = "^1.0.0"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pylint = "^2.12.2"
commitizen = "^2.21.2"
black = "^22.1.0"
pre-commit = "^2.16.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
devtools = "^0.8.0"
tox = "^3.24.5"
sqlalchemy-stubs = "^0.4"
python-dotenv = "^0.19.2"
autoflake = "^1.4"
requests = "^2.27.1"
requests-oauthlib = "^1.3.1"
isort = "^5.10.1"

[tool.pylint.classes]
check-protected-access-in-special-methods = "no"
defining-attr-methods = [
    "__init__",
    "__new__",
    "setUp",
    "__post_init__"
]
exclude-protected = [
    "_asdict",
    "_fields",
    "_replace",
    "_source",
    "_make"
]
valid-classmethod-first-arg = "cls"
valid-metaclass-classmethod-first-arg = "cls"
extension-pkg-whitelist = [
    "ujson",
    "pydantic"
]

[tool.pylint.design]
ignored-parents = []
max-args = 5
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 2

[tool.pylint.exceptions]
overgeneral-exceptions = ["BaseException"]

[tool.pylint.logging]
logging-format-style = "old"
logging-modules = "logging"

[tool.pylint.master]
fail-on = ["W","E"]
fail-under = 10.0
ignore = ["versions"]
ignore-paths = ["src/alembic/env.py"]
ignore-patterns = []
jobs = 1
limit-inference-results = 100
load-plugins = []
persistent = "yes"
py-version = 3.7
suggestion-mode = "yes"
unsafe-load-any-extension = "no"

[tool.pylint.messages_control]
max-line-length = 120
confidence = []
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods"
]
enable = []

[tool.pylint.reports]
evaluation = "max((100.0 - 10 * error - 5 * warning - 2 * refactor - convention) / 10.0 , 0)"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov-report html --cov-report term --cov=the_flash"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38,py39,py310
[tox:.package]
basepython = python3

[testenv]
deps = pytest
       pytest-randomly
       pytest-mock
commands = pytest tests
"""
